// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildTrainingStatePayload — golden archetype canaries > assembles a valid payload for the beginner archetype 1`] = `
{
  "candidate_exercises": [
    {
      "equipment": "machine",
      "id": "def-calf-raise",
      "intensity_class": "light",
      "movement_pattern": "isolation",
      "name": "Calf Raise",
      "primary_faus": [
        "calves",
      ],
      "secondary_faus": [],
    },
    {
      "equipment": "dumbbell",
      "id": "def-dumbbell-bench-press",
      "intensity_class": "moderate",
      "movement_pattern": "horizontal_push",
      "name": "Dumbbell Bench Press",
      "primary_faus": [
        "chest",
        "triceps",
      ],
      "secondary_faus": [
        "front-delts",
      ],
    },
    {
      "equipment": "dumbbell",
      "id": "def-dumbbell-curl",
      "intensity_class": "light",
      "movement_pattern": "isolation",
      "name": "Dumbbell Curl",
      "primary_faus": [
        "biceps",
      ],
      "secondary_faus": [
        "forearms",
      ],
    },
    {
      "equipment": "dumbbell",
      "id": "def-dumbbell-row",
      "intensity_class": "moderate",
      "movement_pattern": "horizontal_pull",
      "name": "Dumbbell Row",
      "primary_faus": [
        "mid-back",
        "lats",
      ],
      "secondary_faus": [
        "biceps",
      ],
    },
    {
      "equipment": "dumbbell",
      "id": "def-goblet-squat",
      "intensity_class": "moderate",
      "movement_pattern": "squat",
      "name": "Goblet Squat",
      "primary_faus": [
        "quads",
      ],
      "secondary_faus": [
        "glutes",
      ],
    },
    {
      "equipment": "dumbbell",
      "id": "def-incline-dumbbell-press",
      "intensity_class": "moderate",
      "movement_pattern": "horizontal_push",
      "name": "Incline Dumbbell Press",
      "primary_faus": [
        "chest",
        "front-delts",
      ],
      "secondary_faus": [
        "triceps",
      ],
    },
    {
      "equipment": "dumbbell",
      "id": "def-lateral-raise",
      "intensity_class": "light",
      "movement_pattern": "isolation",
      "name": "Lateral Raise",
      "primary_faus": [
        "side-delts",
      ],
      "secondary_faus": [],
    },
    {
      "equipment": "machine",
      "id": "def-leg-curl",
      "intensity_class": "light",
      "movement_pattern": "isolation",
      "name": "Leg Curl",
      "primary_faus": [
        "hamstrings",
      ],
      "secondary_faus": [],
    },
    {
      "equipment": "machine",
      "id": "def-leg-extension",
      "intensity_class": "light",
      "movement_pattern": "isolation",
      "name": "Leg Extension",
      "primary_faus": [
        "quads",
      ],
      "secondary_faus": [],
    },
    {
      "equipment": "machine",
      "id": "def-leg-press",
      "intensity_class": "moderate",
      "movement_pattern": "squat",
      "name": "Leg Press",
      "primary_faus": [
        "quads",
      ],
      "secondary_faus": [
        "glutes",
        "hamstrings",
      ],
    },
    {
      "equipment": "bodyweight",
      "id": "def-pull-up",
      "intensity_class": "heavy",
      "movement_pattern": "vertical_pull",
      "name": "Pull-Up",
      "primary_faus": [
        "lats",
      ],
      "secondary_faus": [
        "biceps",
        "mid-back",
      ],
    },
    {
      "equipment": "bodyweight",
      "id": "def-standard-push-up",
      "intensity_class": "moderate",
      "movement_pattern": "horizontal_push",
      "name": "Standard Push-Up",
      "primary_faus": [
        "chest",
        "triceps",
      ],
      "secondary_faus": [
        "front-delts",
      ],
    },
  ],
  "data_maturity": "cold_start",
  "durable_profile": {
    "banned_exercise_ids": [],
    "default_intensity_preference": null,
    "equipment_available": [
      "dumbbells",
      "machines",
      "bodyweight",
    ],
    "goal_sentences": [
      "Get stronger (top priority).",
      "Build muscle (medium priority).",
      "Aims for 3 sessions/week, ~45 min each.",
      "Prefers a full-body split.",
      "Mindful of injury: knee.",
      "New to training apps — prioritize simple, learnable movements and clear guidance.",
    ],
    "ratio_targets": {
      "abs": 1,
      "adductors": 1,
      "biceps": 1,
      "calves": 1,
      "chest": 1,
      "forearms": 1,
      "front-delts": 1,
      "glutes": 1,
      "hamstrings": 1,
      "lats": 1,
      "lower-back": 1,
      "mid-back": 1,
      "obliques": 1,
      "quads": 1,
      "rear-delts": 1,
      "side-delts": 1,
      "traps": 1,
      "triceps": 1,
    },
    "weekly_intent": [
      {
        "text": "Train 2-3x per week, full body",
        "type": "free_text",
      },
    ],
  },
  "ephemeral_context": {
    "deprioritize_freetext": null,
    "equipment_override": null,
    "intensity_vibe": "solid",
    "prioritize_freetext": null,
    "time_budget_minutes": 45,
  },
  "training_state": {
    "acute_chronic_ratio": null,
    "days_since_any_session": 3,
    "detraining_gap": null,
    "goal_progress": [],
    "now": "2026-07-01T18:00:00.000Z",
    "per_fau": [
      {
        "actual_14d_share": 0.2258,
        "baseline_weekly_sets": null,
        "deficit_share": -0.0591,
        "fau": "chest",
        "last_heavy_days_ago": null,
        "last_session_days_ago": 3,
        "low_data": true,
        "rolling_14d_sets": 7,
        "rolling_7d_sets": 7,
        "sessions_14d": 2,
        "target_share": 0.1667,
      },
      {
        "actual_14d_share": 0.0968,
        "baseline_weekly_sets": null,
        "deficit_share": 0.0699,
        "fau": "mid-back",
        "last_heavy_days_ago": null,
        "last_session_days_ago": 3,
        "low_data": true,
        "rolling_14d_sets": 3,
        "rolling_7d_sets": 3,
        "sessions_14d": 1,
        "target_share": 0.1667,
      },
      {
        "actual_14d_share": 0.0645,
        "baseline_weekly_sets": null,
        "deficit_share": 0.1022,
        "fau": "side-delts",
        "last_heavy_days_ago": null,
        "last_session_days_ago": 3,
        "low_data": true,
        "rolling_14d_sets": 2,
        "rolling_7d_sets": 2,
        "sessions_14d": 1,
        "target_share": 0.1667,
      },
      {
        "actual_14d_share": 0.1935,
        "baseline_weekly_sets": null,
        "deficit_share": -0.0268,
        "fau": "lats",
        "last_heavy_days_ago": null,
        "last_session_days_ago": 3,
        "low_data": true,
        "rolling_14d_sets": 6,
        "rolling_7d_sets": 6,
        "sessions_14d": 2,
        "target_share": 0.1667,
      },
      {
        "actual_14d_share": 0.2258,
        "baseline_weekly_sets": null,
        "deficit_share": -0.0591,
        "fau": "triceps",
        "last_heavy_days_ago": null,
        "last_session_days_ago": 3,
        "low_data": true,
        "rolling_14d_sets": 7,
        "rolling_7d_sets": 7,
        "sessions_14d": 2,
        "target_share": 0.1667,
      },
      {
        "actual_14d_share": 0.1935,
        "baseline_weekly_sets": null,
        "deficit_share": -0.0268,
        "fau": "quads",
        "last_heavy_days_ago": null,
        "last_session_days_ago": 3,
        "low_data": true,
        "rolling_14d_sets": 6,
        "rolling_7d_sets": 6,
        "sessions_14d": 2,
        "target_share": 0.1667,
      },
    ],
    "per_movement_calibration": [],
    "preferences_summary": {
      "high_confidence_dislikes": [],
      "high_confidence_likes": [],
      "low_confidence_note": "Most exercises have too little preference data — defer to the candidate list.",
    },
    "recent_feedback": {
      "common_additions_fau": [],
      "common_deletions_fau": [],
      "common_swaps": [],
      "suggestions_last_30d": 0,
      "swap_rate": 0,
    },
    "recent_sessions": [
      {
        "abandoned": false,
        "days_ago": 3,
        "duration_min": 55,
        "notes": [],
        "total_sets": 10,
      },
      {
        "abandoned": false,
        "days_ago": 7,
        "duration_min": 55,
        "notes": [],
        "total_sets": 11,
      },
    ],
    "sessions_last_7d": 2,
    "today_dow": "wednesday",
    "total_weekly_sets_baseline": null,
    "weekly_intent_status": [
      {
        "intent_summary": "Train 2-3x per week, full body",
        "satisfied_last_7d": false,
      },
    ],
  },
}
`;

exports[`buildTrainingStatePayload — golden archetype canaries > assembles a valid payload for the bodybuilder archetype 1`] = `
{
  "candidate_exercises": [
    {
      "equipment": "barbell",
      "id": "def-barbell-back-squat",
      "intensity_class": "heavy",
      "movement_pattern": "squat",
      "name": "Barbell Back Squat",
      "primary_faus": [
        "quads",
        "glutes",
      ],
      "secondary_faus": [
        "hamstrings",
      ],
    },
    {
      "equipment": "barbell",
      "id": "def-barbell-bench-press",
      "intensity_class": "heavy",
      "movement_pattern": "horizontal_push",
      "name": "Barbell Bench Press",
      "primary_faus": [
        "chest",
        "triceps",
      ],
      "secondary_faus": [
        "front-delts",
      ],
    },
    {
      "equipment": "barbell",
      "id": "def-barbell-row",
      "intensity_class": "moderate",
      "movement_pattern": "horizontal_pull",
      "name": "Barbell Row",
      "primary_faus": [
        "mid-back",
        "lats",
      ],
      "secondary_faus": [
        "biceps",
      ],
    },
    {
      "equipment": "cable",
      "id": "def-cable-chest-fly",
      "intensity_class": "light",
      "movement_pattern": "isolation",
      "name": "Cable Chest Fly",
      "primary_faus": [
        "chest",
      ],
      "secondary_faus": [
        "front-delts",
      ],
    },
    {
      "equipment": "machine",
      "id": "def-calf-raise",
      "intensity_class": "light",
      "movement_pattern": "isolation",
      "name": "Calf Raise",
      "primary_faus": [
        "calves",
      ],
      "secondary_faus": [],
    },
    {
      "equipment": "barbell",
      "id": "def-conventional-deadlift",
      "intensity_class": "heavy",
      "movement_pattern": "hinge",
      "name": "Conventional Deadlift",
      "primary_faus": [
        "glutes",
        "hamstrings",
        "lower-back",
      ],
      "secondary_faus": [
        "traps",
      ],
    },
    {
      "equipment": "dumbbell",
      "id": "def-dumbbell-bench-press",
      "intensity_class": "moderate",
      "movement_pattern": "horizontal_push",
      "name": "Dumbbell Bench Press",
      "primary_faus": [
        "chest",
        "triceps",
      ],
      "secondary_faus": [
        "front-delts",
      ],
    },
    {
      "equipment": "dumbbell",
      "id": "def-dumbbell-curl",
      "intensity_class": "light",
      "movement_pattern": "isolation",
      "name": "Dumbbell Curl",
      "primary_faus": [
        "biceps",
      ],
      "secondary_faus": [
        "forearms",
      ],
    },
    {
      "equipment": "dumbbell",
      "id": "def-dumbbell-row",
      "intensity_class": "moderate",
      "movement_pattern": "horizontal_pull",
      "name": "Dumbbell Row",
      "primary_faus": [
        "mid-back",
        "lats",
      ],
      "secondary_faus": [
        "biceps",
      ],
    },
    {
      "equipment": "cable",
      "id": "def-face-pull",
      "intensity_class": "light",
      "movement_pattern": "horizontal_pull",
      "name": "Face Pull",
      "primary_faus": [
        "rear-delts",
      ],
      "secondary_faus": [
        "traps",
      ],
    },
    {
      "equipment": "barbell",
      "id": "def-front-squat",
      "intensity_class": "heavy",
      "movement_pattern": "squat",
      "name": "Front Squat",
      "primary_faus": [
        "quads",
      ],
      "secondary_faus": [
        "glutes",
      ],
    },
    {
      "equipment": "dumbbell",
      "id": "def-goblet-squat",
      "intensity_class": "moderate",
      "movement_pattern": "squat",
      "name": "Goblet Squat",
      "primary_faus": [
        "quads",
      ],
      "secondary_faus": [
        "glutes",
      ],
    },
    {
      "equipment": "dumbbell",
      "id": "def-incline-dumbbell-press",
      "intensity_class": "moderate",
      "movement_pattern": "horizontal_push",
      "name": "Incline Dumbbell Press",
      "primary_faus": [
        "chest",
        "front-delts",
      ],
      "secondary_faus": [
        "triceps",
      ],
    },
    {
      "equipment": "cable",
      "id": "def-lat-pulldown",
      "intensity_class": "moderate",
      "movement_pattern": "vertical_pull",
      "name": "Lat Pulldown",
      "primary_faus": [
        "lats",
      ],
      "secondary_faus": [
        "biceps",
        "mid-back",
      ],
    },
    {
      "equipment": "dumbbell",
      "id": "def-lateral-raise",
      "intensity_class": "light",
      "movement_pattern": "isolation",
      "name": "Lateral Raise",
      "primary_faus": [
        "side-delts",
      ],
      "secondary_faus": [],
    },
    {
      "equipment": "machine",
      "id": "def-leg-curl",
      "intensity_class": "light",
      "movement_pattern": "isolation",
      "name": "Leg Curl",
      "primary_faus": [
        "hamstrings",
      ],
      "secondary_faus": [],
    },
    {
      "equipment": "machine",
      "id": "def-leg-extension",
      "intensity_class": "light",
      "movement_pattern": "isolation",
      "name": "Leg Extension",
      "primary_faus": [
        "quads",
      ],
      "secondary_faus": [],
    },
    {
      "equipment": "machine",
      "id": "def-leg-press",
      "intensity_class": "moderate",
      "movement_pattern": "squat",
      "name": "Leg Press",
      "primary_faus": [
        "quads",
      ],
      "secondary_faus": [
        "glutes",
        "hamstrings",
      ],
    },
    {
      "equipment": "barbell",
      "id": "def-overhead-press",
      "intensity_class": "heavy",
      "movement_pattern": "vertical_push",
      "name": "Overhead Press",
      "primary_faus": [
        "front-delts",
        "side-delts",
      ],
      "secondary_faus": [
        "triceps",
      ],
    },
    {
      "equipment": "bodyweight",
      "id": "def-pull-up",
      "intensity_class": "heavy",
      "movement_pattern": "vertical_pull",
      "name": "Pull-Up",
      "primary_faus": [
        "lats",
      ],
      "secondary_faus": [
        "biceps",
        "mid-back",
      ],
    },
    {
      "equipment": "barbell",
      "id": "def-romanian-deadlift",
      "intensity_class": "heavy",
      "movement_pattern": "hinge",
      "name": "Romanian Deadlift",
      "primary_faus": [
        "hamstrings",
        "glutes",
      ],
      "secondary_faus": [
        "lower-back",
      ],
    },
    {
      "equipment": "cable",
      "id": "def-seated-cable-row",
      "intensity_class": "moderate",
      "movement_pattern": "horizontal_pull",
      "name": "Seated Cable Row",
      "primary_faus": [
        "mid-back",
        "lats",
      ],
      "secondary_faus": [
        "biceps",
      ],
    },
    {
      "equipment": "bodyweight",
      "id": "def-standard-push-up",
      "intensity_class": "moderate",
      "movement_pattern": "horizontal_push",
      "name": "Standard Push-Up",
      "primary_faus": [
        "chest",
        "triceps",
      ],
      "secondary_faus": [
        "front-delts",
      ],
    },
    {
      "equipment": "cable",
      "id": "def-tricep-pushdown",
      "intensity_class": "light",
      "movement_pattern": "isolation",
      "name": "Tricep Pushdown",
      "primary_faus": [
        "triceps",
      ],
      "secondary_faus": [],
    },
  ],
  "data_maturity": "established",
  "durable_profile": {
    "banned_exercise_ids": [],
    "default_intensity_preference": "hypertrophy",
    "equipment_available": [
      "barbell",
      "dumbbells",
      "cable",
      "machines",
      "bands",
      "bodyweight",
    ],
    "goal_sentences": [
      "Balanced hypertrophy everywhere",
      "Bring up rear delts and hamstrings",
    ],
    "ratio_targets": {
      "abs": 1,
      "adductors": 1,
      "biceps": 1,
      "calves": 1,
      "chest": 1,
      "forearms": 1,
      "front-delts": 1,
      "glutes": 1,
      "hamstrings": 1.2000000000000002,
      "lats": 1,
      "lower-back": 1,
      "mid-back": 1,
      "obliques": 1,
      "quads": 1,
      "rear-delts": 1.2000000000000002,
      "side-delts": 1,
      "traps": 1,
      "triceps": 1,
    },
    "weekly_intent": [
      {
        "text": "Train 4-5x per week",
        "type": "free_text",
      },
      {
        "text": "Every FAU at least once per week",
        "type": "free_text",
      },
    ],
  },
  "ephemeral_context": {
    "deprioritize_freetext": null,
    "equipment_override": null,
    "intensity_vibe": "solid",
    "prioritize_freetext": null,
    "time_budget_minutes": 45,
  },
  "training_state": {
    "acute_chronic_ratio": 1.96,
    "days_since_any_session": 1,
    "detraining_gap": null,
    "goal_progress": [],
    "now": "2026-07-01T18:00:00.000Z",
    "per_fau": [
      {
        "actual_14d_share": 0.1111,
        "baseline_weekly_sets": 10,
        "deficit_share": -0.0305,
        "fau": "chest",
        "last_heavy_days_ago": 3,
        "last_session_days_ago": 3,
        "low_data": false,
        "rolling_14d_sets": 26,
        "rolling_7d_sets": 26,
        "sessions_14d": 2,
        "status": "over",
        "target_share": 0.0806,
      },
      {
        "actual_14d_share": 0.0342,
        "baseline_weekly_sets": 3,
        "deficit_share": 0.0464,
        "fau": "mid-back",
        "last_heavy_days_ago": 3,
        "last_session_days_ago": 3,
        "low_data": false,
        "rolling_14d_sets": 8,
        "rolling_7d_sets": 8,
        "sessions_14d": 2,
        "status": "neglected",
        "target_share": 0.0806,
      },
      {
        "actual_14d_share": 0.094,
        "baseline_weekly_sets": 7,
        "deficit_share": -0.0134,
        "fau": "front-delts",
        "last_heavy_days_ago": 1,
        "last_session_days_ago": 1,
        "low_data": false,
        "rolling_14d_sets": 22,
        "rolling_7d_sets": 18,
        "sessions_14d": 5,
        "status": "balanced",
        "target_share": 0.0806,
      },
      {
        "actual_14d_share": 0.1197,
        "baseline_weekly_sets": 8,
        "deficit_share": -0.0391,
        "fau": "side-delts",
        "last_heavy_days_ago": 1,
        "last_session_days_ago": 1,
        "low_data": false,
        "rolling_14d_sets": 28,
        "rolling_7d_sets": 20,
        "sessions_14d": 3,
        "status": "over",
        "target_share": 0.0806,
      },
      {
        "actual_14d_share": 0.0598,
        "baseline_weekly_sets": 4,
        "deficit_share": 0.037,
        "fau": "rear-delts",
        "last_heavy_days_ago": 1,
        "last_session_days_ago": 1,
        "low_data": false,
        "rolling_14d_sets": 14,
        "rolling_7d_sets": 10,
        "sessions_14d": 3,
        "status": "neglected",
        "target_share": 0.0968,
      },
      {
        "actual_14d_share": 0.0769,
        "baseline_weekly_sets": 7,
        "deficit_share": 0.0037,
        "fau": "lats",
        "last_heavy_days_ago": 3,
        "last_session_days_ago": 3,
        "low_data": false,
        "rolling_14d_sets": 18,
        "rolling_7d_sets": 18,
        "sessions_14d": 2,
        "status": "balanced",
        "target_share": 0.0806,
      },
      {
        "actual_14d_share": 0.047,
        "baseline_weekly_sets": 3,
        "deficit_share": 0.0336,
        "fau": "biceps",
        "last_heavy_days_ago": 1,
        "last_session_days_ago": 1,
        "low_data": false,
        "rolling_14d_sets": 11,
        "rolling_7d_sets": 8,
        "sessions_14d": 3,
        "status": "neglected",
        "target_share": 0.0806,
      },
      {
        "actual_14d_share": 0.0897,
        "baseline_weekly_sets": 7,
        "deficit_share": -0.0091,
        "fau": "triceps",
        "last_heavy_days_ago": 1,
        "last_session_days_ago": 1,
        "low_data": false,
        "rolling_14d_sets": 21,
        "rolling_7d_sets": 18,
        "sessions_14d": 5,
        "status": "balanced",
        "target_share": 0.0806,
      },
      {
        "actual_14d_share": 0.1068,
        "baseline_weekly_sets": 7,
        "deficit_share": -0.0262,
        "fau": "quads",
        "last_heavy_days_ago": 2,
        "last_session_days_ago": 2,
        "low_data": false,
        "rolling_14d_sets": 25,
        "rolling_7d_sets": 18,
        "sessions_14d": 3,
        "status": "balanced",
        "target_share": 0.0806,
      },
      {
        "actual_14d_share": 0.094,
        "baseline_weekly_sets": 6,
        "deficit_share": 0.0028,
        "fau": "hamstrings",
        "last_heavy_days_ago": 2,
        "last_session_days_ago": 2,
        "low_data": false,
        "rolling_14d_sets": 22,
        "rolling_7d_sets": 16,
        "sessions_14d": 3,
        "status": "balanced",
        "target_share": 0.0968,
      },
      {
        "actual_14d_share": 0.1068,
        "baseline_weekly_sets": 7,
        "deficit_share": -0.0262,
        "fau": "glutes",
        "last_heavy_days_ago": 2,
        "last_session_days_ago": 2,
        "low_data": false,
        "rolling_14d_sets": 25,
        "rolling_7d_sets": 18,
        "sessions_14d": 3,
        "status": "balanced",
        "target_share": 0.0806,
      },
      {
        "actual_14d_share": 0.0598,
        "baseline_weekly_sets": 4,
        "deficit_share": 0.0208,
        "fau": "calves",
        "last_heavy_days_ago": 2,
        "last_session_days_ago": 2,
        "low_data": false,
        "rolling_14d_sets": 14,
        "rolling_7d_sets": 10,
        "sessions_14d": 3,
        "status": "balanced",
        "target_share": 0.0806,
      },
    ],
    "per_movement_calibration": [
      {
        "current_ewma_top_weight_lbs": 296.3,
        "estimate_staleness_days": 2,
        "last_session_days_ago": 2,
        "movement_pattern": "hinge",
        "recent_observations": [
          {
            "days_ago": 27,
            "weight_lbs": 215,
          },
          {
            "days_ago": 20,
            "weight_lbs": 220,
          },
          {
            "days_ago": 13,
            "weight_lbs": 220,
          },
          {
            "days_ago": 5,
            "weight_lbs": 225,
          },
          {
            "days_ago": 2,
            "weight_lbs": 225,
          },
        ],
        "typical_rep_range": "10-11",
        "typical_rpe": 7.6,
      },
      {
        "current_ewma_top_weight_lbs": 149.9,
        "estimate_staleness_days": 1,
        "last_session_days_ago": 1,
        "movement_pattern": "horizontal_pull",
        "recent_observations": [
          {
            "days_ago": 11,
            "weight_lbs": 35,
          },
          {
            "days_ago": 6,
            "weight_lbs": 165,
          },
          {
            "days_ago": 4,
            "weight_lbs": 35,
          },
          {
            "days_ago": 3,
            "weight_lbs": 170,
          },
          {
            "days_ago": 1,
            "weight_lbs": 35,
          },
        ],
        "typical_rep_range": "10-16",
        "typical_rpe": 7.6,
      },
      {
        "current_ewma_top_weight_lbs": 279.3,
        "estimate_staleness_days": 3,
        "last_session_days_ago": 3,
        "movement_pattern": "horizontal_push",
        "recent_observations": [
          {
            "days_ago": 29,
            "weight_lbs": 200,
          },
          {
            "days_ago": 22,
            "weight_lbs": 205,
          },
          {
            "days_ago": 15,
            "weight_lbs": 205,
          },
          {
            "days_ago": 6,
            "weight_lbs": 205,
          },
          {
            "days_ago": 3,
            "weight_lbs": 210,
          },
        ],
        "typical_rep_range": "11",
        "typical_rpe": 7.8,
      },
      {
        "current_ewma_top_weight_lbs": 94.8,
        "estimate_staleness_days": 1,
        "last_session_days_ago": 1,
        "movement_pattern": "isolation",
        "recent_observations": [
          {
            "days_ago": 5,
            "weight_lbs": 150,
          },
          {
            "days_ago": 4,
            "weight_lbs": 50,
          },
          {
            "days_ago": 3,
            "weight_lbs": 40,
          },
          {
            "days_ago": 2,
            "weight_lbs": 155,
          },
          {
            "days_ago": 1,
            "weight_lbs": 50,
          },
        ],
        "typical_rep_range": "12-16",
        "typical_rpe": 7.5,
      },
      {
        "current_ewma_top_weight_lbs": 307.2,
        "estimate_staleness_days": 2,
        "last_session_days_ago": 2,
        "movement_pattern": "squat",
        "recent_observations": [
          {
            "days_ago": 27,
            "weight_lbs": 220,
          },
          {
            "days_ago": 20,
            "weight_lbs": 225,
          },
          {
            "days_ago": 13,
            "weight_lbs": 225,
          },
          {
            "days_ago": 5,
            "weight_lbs": 230,
          },
          {
            "days_ago": 2,
            "weight_lbs": 230,
          },
        ],
        "typical_rep_range": "10-11",
        "typical_rpe": 7.4,
      },
      {
        "current_ewma_top_weight_lbs": 245.2,
        "estimate_staleness_days": 3,
        "last_session_days_ago": 3,
        "movement_pattern": "vertical_pull",
        "recent_observations": [
          {
            "days_ago": 29,
            "weight_lbs": 175,
          },
          {
            "days_ago": 22,
            "weight_lbs": 180,
          },
          {
            "days_ago": 15,
            "weight_lbs": 180,
          },
          {
            "days_ago": 6,
            "weight_lbs": 180,
          },
          {
            "days_ago": 3,
            "weight_lbs": 185,
          },
        ],
        "typical_rep_range": "11",
        "typical_rpe": 7.8,
      },
      {
        "current_ewma_top_weight_lbs": 156.6,
        "estimate_staleness_days": 1,
        "last_session_days_ago": 1,
        "movement_pattern": "vertical_push",
        "recent_observations": [
          {
            "days_ago": 25,
            "weight_lbs": 115,
          },
          {
            "days_ago": 18,
            "weight_lbs": 115,
          },
          {
            "days_ago": 11,
            "weight_lbs": 115,
          },
          {
            "days_ago": 4,
            "weight_lbs": 115,
          },
          {
            "days_ago": 1,
            "weight_lbs": 115,
          },
        ],
        "typical_rep_range": "10-11",
        "typical_rpe": 7.8,
      },
    ],
    "preferences_summary": {
      "high_confidence_dislikes": [],
      "high_confidence_likes": [],
      "low_confidence_note": "Most exercises have too little preference data — defer to the candidate list.",
    },
    "recent_feedback": {
      "common_additions_fau": [],
      "common_deletions_fau": [],
      "common_swaps": [],
      "suggestions_last_30d": 0,
      "swap_rate": 0,
    },
    "recent_sessions": [
      {
        "abandoned": false,
        "days_ago": 1,
        "duration_min": 55,
        "notes": [],
        "total_sets": 23,
      },
      {
        "abandoned": false,
        "days_ago": 2,
        "duration_min": 55,
        "notes": [],
        "total_sets": 22,
      },
      {
        "abandoned": false,
        "days_ago": 3,
        "duration_min": 55,
        "notes": [],
        "total_sets": 22,
      },
      {
        "abandoned": false,
        "days_ago": 4,
        "duration_min": 55,
        "notes": [],
        "total_sets": 23,
      },
      {
        "abandoned": false,
        "days_ago": 5,
        "duration_min": 55,
        "notes": [],
        "total_sets": 22,
      },
      {
        "abandoned": false,
        "days_ago": 6,
        "duration_min": 55,
        "notes": [],
        "total_sets": 22,
      },
      {
        "abandoned": false,
        "days_ago": 11,
        "duration_min": 55,
        "notes": [],
        "total_sets": 18,
      },
      {
        "abandoned": false,
        "days_ago": 13,
        "duration_min": 55,
        "notes": [],
        "total_sets": 17,
      },
      {
        "abandoned": false,
        "days_ago": 15,
        "duration_min": 55,
        "notes": [],
        "total_sets": 17,
      },
      {
        "abandoned": false,
        "days_ago": 18,
        "duration_min": 55,
        "notes": [],
        "total_sets": 18,
      },
    ],
    "sessions_last_7d": 6,
    "today_dow": "wednesday",
    "total_weekly_sets_baseline": 52,
    "weekly_intent_status": [
      {
        "intent_summary": "Train 4-5x per week",
        "satisfied_last_7d": false,
      },
      {
        "intent_summary": "Every FAU at least once per week",
        "satisfied_last_7d": false,
      },
    ],
  },
}
`;

exports[`buildTrainingStatePayload — golden archetype canaries > assembles a valid payload for the cyclist archetype 1`] = `
{
  "candidate_exercises": [
    {
      "equipment": "barbell",
      "id": "def-barbell-back-squat",
      "intensity_class": "heavy",
      "movement_pattern": "squat",
      "name": "Barbell Back Squat",
      "primary_faus": [
        "quads",
        "glutes",
      ],
      "secondary_faus": [
        "hamstrings",
      ],
    },
    {
      "equipment": "barbell",
      "id": "def-barbell-bench-press",
      "intensity_class": "heavy",
      "movement_pattern": "horizontal_push",
      "name": "Barbell Bench Press",
      "primary_faus": [
        "chest",
        "triceps",
      ],
      "secondary_faus": [
        "front-delts",
      ],
    },
    {
      "equipment": "barbell",
      "id": "def-barbell-row",
      "intensity_class": "moderate",
      "movement_pattern": "horizontal_pull",
      "name": "Barbell Row",
      "primary_faus": [
        "mid-back",
        "lats",
      ],
      "secondary_faus": [
        "biceps",
      ],
    },
    {
      "equipment": "cable",
      "id": "def-cable-chest-fly",
      "intensity_class": "light",
      "movement_pattern": "isolation",
      "name": "Cable Chest Fly",
      "primary_faus": [
        "chest",
      ],
      "secondary_faus": [
        "front-delts",
      ],
    },
    {
      "equipment": "machine",
      "id": "def-calf-raise",
      "intensity_class": "light",
      "movement_pattern": "isolation",
      "name": "Calf Raise",
      "primary_faus": [
        "calves",
      ],
      "secondary_faus": [],
    },
    {
      "equipment": "barbell",
      "id": "def-conventional-deadlift",
      "intensity_class": "heavy",
      "movement_pattern": "hinge",
      "name": "Conventional Deadlift",
      "primary_faus": [
        "glutes",
        "hamstrings",
        "lower-back",
      ],
      "secondary_faus": [
        "traps",
      ],
    },
    {
      "equipment": "dumbbell",
      "id": "def-dumbbell-bench-press",
      "intensity_class": "moderate",
      "movement_pattern": "horizontal_push",
      "name": "Dumbbell Bench Press",
      "primary_faus": [
        "chest",
        "triceps",
      ],
      "secondary_faus": [
        "front-delts",
      ],
    },
    {
      "equipment": "dumbbell",
      "id": "def-dumbbell-curl",
      "intensity_class": "light",
      "movement_pattern": "isolation",
      "name": "Dumbbell Curl",
      "primary_faus": [
        "biceps",
      ],
      "secondary_faus": [
        "forearms",
      ],
    },
    {
      "equipment": "dumbbell",
      "id": "def-dumbbell-row",
      "intensity_class": "moderate",
      "movement_pattern": "horizontal_pull",
      "name": "Dumbbell Row",
      "primary_faus": [
        "mid-back",
        "lats",
      ],
      "secondary_faus": [
        "biceps",
      ],
    },
    {
      "equipment": "cable",
      "id": "def-face-pull",
      "intensity_class": "light",
      "movement_pattern": "horizontal_pull",
      "name": "Face Pull",
      "primary_faus": [
        "rear-delts",
      ],
      "secondary_faus": [
        "traps",
      ],
    },
    {
      "equipment": "barbell",
      "id": "def-front-squat",
      "intensity_class": "heavy",
      "movement_pattern": "squat",
      "name": "Front Squat",
      "primary_faus": [
        "quads",
      ],
      "secondary_faus": [
        "glutes",
      ],
    },
    {
      "equipment": "dumbbell",
      "id": "def-goblet-squat",
      "intensity_class": "moderate",
      "movement_pattern": "squat",
      "name": "Goblet Squat",
      "primary_faus": [
        "quads",
      ],
      "secondary_faus": [
        "glutes",
      ],
    },
    {
      "equipment": "dumbbell",
      "id": "def-incline-dumbbell-press",
      "intensity_class": "moderate",
      "movement_pattern": "horizontal_push",
      "name": "Incline Dumbbell Press",
      "primary_faus": [
        "chest",
        "front-delts",
      ],
      "secondary_faus": [
        "triceps",
      ],
    },
    {
      "equipment": "cable",
      "id": "def-lat-pulldown",
      "intensity_class": "moderate",
      "movement_pattern": "vertical_pull",
      "name": "Lat Pulldown",
      "primary_faus": [
        "lats",
      ],
      "secondary_faus": [
        "biceps",
        "mid-back",
      ],
    },
    {
      "equipment": "dumbbell",
      "id": "def-lateral-raise",
      "intensity_class": "light",
      "movement_pattern": "isolation",
      "name": "Lateral Raise",
      "primary_faus": [
        "side-delts",
      ],
      "secondary_faus": [],
    },
    {
      "equipment": "machine",
      "id": "def-leg-curl",
      "intensity_class": "light",
      "movement_pattern": "isolation",
      "name": "Leg Curl",
      "primary_faus": [
        "hamstrings",
      ],
      "secondary_faus": [],
    },
    {
      "equipment": "machine",
      "id": "def-leg-extension",
      "intensity_class": "light",
      "movement_pattern": "isolation",
      "name": "Leg Extension",
      "primary_faus": [
        "quads",
      ],
      "secondary_faus": [],
    },
    {
      "equipment": "machine",
      "id": "def-leg-press",
      "intensity_class": "moderate",
      "movement_pattern": "squat",
      "name": "Leg Press",
      "primary_faus": [
        "quads",
      ],
      "secondary_faus": [
        "glutes",
        "hamstrings",
      ],
    },
    {
      "equipment": "barbell",
      "id": "def-overhead-press",
      "intensity_class": "heavy",
      "movement_pattern": "vertical_push",
      "name": "Overhead Press",
      "primary_faus": [
        "front-delts",
        "side-delts",
      ],
      "secondary_faus": [
        "triceps",
      ],
    },
    {
      "equipment": "bodyweight",
      "id": "def-pull-up",
      "intensity_class": "heavy",
      "movement_pattern": "vertical_pull",
      "name": "Pull-Up",
      "primary_faus": [
        "lats",
      ],
      "secondary_faus": [
        "biceps",
        "mid-back",
      ],
    },
    {
      "equipment": "barbell",
      "id": "def-romanian-deadlift",
      "intensity_class": "heavy",
      "movement_pattern": "hinge",
      "name": "Romanian Deadlift",
      "primary_faus": [
        "hamstrings",
        "glutes",
      ],
      "secondary_faus": [
        "lower-back",
      ],
    },
    {
      "equipment": "cable",
      "id": "def-seated-cable-row",
      "intensity_class": "moderate",
      "movement_pattern": "horizontal_pull",
      "name": "Seated Cable Row",
      "primary_faus": [
        "mid-back",
        "lats",
      ],
      "secondary_faus": [
        "biceps",
      ],
    },
    {
      "equipment": "bodyweight",
      "id": "def-standard-push-up",
      "intensity_class": "moderate",
      "movement_pattern": "horizontal_push",
      "name": "Standard Push-Up",
      "primary_faus": [
        "chest",
        "triceps",
      ],
      "secondary_faus": [
        "front-delts",
      ],
    },
    {
      "equipment": "cable",
      "id": "def-tricep-pushdown",
      "intensity_class": "light",
      "movement_pattern": "isolation",
      "name": "Tricep Pushdown",
      "primary_faus": [
        "triceps",
      ],
      "secondary_faus": [],
    },
  ],
  "data_maturity": "established",
  "durable_profile": {
    "banned_exercise_ids": [],
    "default_intensity_preference": "hypertrophy",
    "equipment_available": [
      "barbell",
      "dumbbells",
      "cable",
      "machines",
      "bands",
      "bodyweight",
    ],
    "goal_sentences": [
      "Upper-body hypertrophy focus",
      "Spare legs for biking",
      "Improve bench press",
    ],
    "ratio_targets": {
      "abs": 1,
      "adductors": 1,
      "biceps": 1,
      "calves": 0.30000000000000004,
      "chest": 1.3,
      "forearms": 1,
      "front-delts": 1,
      "glutes": 1,
      "hamstrings": 0.6000000000000001,
      "lats": 1.2000000000000002,
      "lower-back": 1,
      "mid-back": 1.2000000000000002,
      "obliques": 1,
      "quads": 0.6000000000000001,
      "rear-delts": 1,
      "side-delts": 1,
      "traps": 1,
      "triceps": 1,
    },
    "weekly_intent": [
      {
        "text": "Tilt toward upper body volume",
        "type": "free_text",
      },
      {
        "text": "At most 1 leg day per week, never before a long ride",
        "type": "free_text",
      },
    ],
  },
  "ephemeral_context": {
    "deprioritize_freetext": null,
    "equipment_override": null,
    "intensity_vibe": "solid",
    "prioritize_freetext": null,
    "time_budget_minutes": 45,
  },
  "training_state": {
    "acute_chronic_ratio": 0.8,
    "days_since_any_session": 2,
    "detraining_gap": null,
    "goal_progress": [
      {
        "goal": "Improve bench press",
        "interpretation": "horizontal_push EWMA + e1RM trend",
        "recent_top_sets_lbs": [
          180,
          185,
          185,
          150,
        ],
        "trend": "regressing",
        "weeks_observed": 4,
      },
    ],
    "now": "2026-07-01T18:00:00.000Z",
    "per_fau": [
      {
        "actual_14d_share": 0.1333,
        "baseline_weekly_sets": 10,
        "deficit_share": -0.002,
        "fau": "chest",
        "last_heavy_days_ago": 5,
        "last_session_days_ago": 5,
        "low_data": false,
        "rolling_14d_sets": 6,
        "rolling_7d_sets": 6,
        "sessions_14d": 1,
        "status": "balanced",
        "target_share": 0.1313,
      },
      {
        "actual_14d_share": 0.1111,
        "baseline_weekly_sets": 3,
        "deficit_share": 0.0101,
        "fau": "mid-back",
        "last_heavy_days_ago": 2,
        "last_session_days_ago": 2,
        "low_data": false,
        "rolling_14d_sets": 5,
        "rolling_7d_sets": 2,
        "sessions_14d": 2,
        "status": "balanced",
        "target_share": 0.1212,
      },
      {
        "actual_14d_share": 0.0444,
        "baseline_weekly_sets": 3,
        "deficit_share": 0.0566,
        "fau": "front-delts",
        "last_heavy_days_ago": 5,
        "last_session_days_ago": 5,
        "low_data": false,
        "rolling_14d_sets": 2,
        "rolling_7d_sets": 2,
        "sessions_14d": 1,
        "status": "neglected",
        "target_share": 0.101,
      },
      {
        "actual_14d_share": 0.0444,
        "baseline_weekly_sets": 3,
        "deficit_share": 0.0566,
        "fau": "side-delts",
        "last_heavy_days_ago": 5,
        "last_session_days_ago": 5,
        "low_data": false,
        "rolling_14d_sets": 2,
        "rolling_7d_sets": 2,
        "sessions_14d": 1,
        "status": "neglected",
        "target_share": 0.101,
      },
      {
        "actual_14d_share": 0.1111,
        "baseline_weekly_sets": 3,
        "deficit_share": -0.0101,
        "fau": "rear-delts",
        "last_heavy_days_ago": 2,
        "last_session_days_ago": 2,
        "low_data": false,
        "rolling_14d_sets": 5,
        "rolling_7d_sets": 2,
        "sessions_14d": 2,
        "status": "balanced",
        "target_share": 0.101,
      },
      {
        "actual_14d_share": 0.3556,
        "baseline_weekly_sets": 10,
        "deficit_share": -0.2344,
        "fau": "lats",
        "last_heavy_days_ago": 2,
        "last_session_days_ago": 2,
        "low_data": false,
        "rolling_14d_sets": 16,
        "rolling_7d_sets": 6,
        "sessions_14d": 2,
        "status": "over",
        "target_share": 0.1212,
      },
      {
        "actual_14d_share": 0.1111,
        "baseline_weekly_sets": 3,
        "deficit_share": -0.0101,
        "fau": "biceps",
        "last_heavy_days_ago": 2,
        "last_session_days_ago": 2,
        "low_data": false,
        "rolling_14d_sets": 5,
        "rolling_7d_sets": 2,
        "sessions_14d": 2,
        "status": "balanced",
        "target_share": 0.101,
      },
      {
        "actual_14d_share": 0.0889,
        "baseline_weekly_sets": 7,
        "deficit_share": 0.0121,
        "fau": "triceps",
        "last_heavy_days_ago": 5,
        "last_session_days_ago": 5,
        "low_data": false,
        "rolling_14d_sets": 4,
        "rolling_7d_sets": 4,
        "sessions_14d": 1,
        "status": "balanced",
        "target_share": 0.101,
      },
      {
        "actual_14d_share": 0,
        "baseline_weekly_sets": 6,
        "deficit_share": 0.0606,
        "fau": "quads",
        "last_heavy_days_ago": 29,
        "last_session_days_ago": 29,
        "low_data": false,
        "rolling_14d_sets": 0,
        "rolling_7d_sets": 0,
        "sessions_14d": 0,
        "status": "neglected",
        "target_share": 0.0606,
      },
      {
        "actual_14d_share": 0,
        "baseline_weekly_sets": 3,
        "deficit_share": 0.0606,
        "fau": "hamstrings",
        "last_heavy_days_ago": 29,
        "last_session_days_ago": 29,
        "low_data": false,
        "rolling_14d_sets": 0,
        "rolling_7d_sets": 0,
        "sessions_14d": 0,
        "status": "neglected",
        "target_share": 0.0606,
      },
    ],
    "per_movement_calibration": [
      {
        "current_ewma_top_weight_lbs": 192.3,
        "estimate_staleness_days": 2,
        "last_session_days_ago": 2,
        "movement_pattern": "horizontal_pull",
        "recent_observations": [
          {
            "days_ago": 27,
            "weight_lbs": 150,
          },
          {
            "days_ago": 20,
            "weight_lbs": 155,
          },
          {
            "days_ago": 13,
            "weight_lbs": 155,
          },
          {
            "days_ago": 2,
            "weight_lbs": 125,
          },
        ],
        "typical_rep_range": "11",
        "typical_rpe": 7.3,
      },
      {
        "current_ewma_top_weight_lbs": 217,
        "estimate_staleness_days": 5,
        "last_session_days_ago": 5,
        "movement_pattern": "horizontal_push",
        "recent_observations": [
          {
            "days_ago": 30,
            "weight_lbs": 180,
          },
          {
            "days_ago": 23,
            "weight_lbs": 185,
          },
          {
            "days_ago": 16,
            "weight_lbs": 185,
          },
          {
            "days_ago": 5,
            "weight_lbs": 150,
          },
        ],
        "typical_rep_range": "8-9",
        "typical_rpe": 7.5,
      },
      {
        "current_ewma_top_weight_lbs": 53.6,
        "estimate_staleness_days": 2,
        "last_session_days_ago": 2,
        "movement_pattern": "isolation",
        "recent_observations": [
          {
            "days_ago": 20,
            "weight_lbs": 30.9,
          },
          {
            "days_ago": 16,
            "weight_lbs": 45,
          },
          {
            "days_ago": 13,
            "weight_lbs": 30.9,
          },
          {
            "days_ago": 5,
            "weight_lbs": 35,
          },
          {
            "days_ago": 2,
            "weight_lbs": 26.5,
          },
        ],
        "typical_rep_range": "12-13",
        "typical_rpe": 7.4,
      },
      {
        "current_ewma_top_weight_lbs": 196.4,
        "estimate_staleness_days": 2,
        "last_session_days_ago": 2,
        "movement_pattern": "vertical_pull",
        "recent_observations": [
          {
            "days_ago": 27,
            "weight_lbs": 155,
          },
          {
            "days_ago": 20,
            "weight_lbs": 160,
          },
          {
            "days_ago": 13,
            "weight_lbs": 160,
          },
          {
            "days_ago": 2,
            "weight_lbs": 130,
          },
        ],
        "typical_rep_range": "10-11",
        "typical_rpe": 7.8,
      },
    ],
    "preferences_summary": {
      "high_confidence_dislikes": [],
      "high_confidence_likes": [],
      "low_confidence_note": "Most exercises have too little preference data — defer to the candidate list.",
    },
    "recent_feedback": {
      "common_additions_fau": [],
      "common_deletions_fau": [],
      "common_swaps": [],
      "suggestions_last_30d": 0,
      "swap_rate": 0,
    },
    "recent_sessions": [
      {
        "abandoned": false,
        "days_ago": 2,
        "duration_min": 55,
        "notes": [],
        "total_sets": 10,
      },
      {
        "abandoned": false,
        "days_ago": 5,
        "duration_min": 55,
        "notes": [],
        "total_sets": 10,
      },
      {
        "abandoned": false,
        "days_ago": 13,
        "duration_min": 55,
        "notes": [],
        "total_sets": 16,
      },
      {
        "abandoned": false,
        "days_ago": 16,
        "duration_min": 55,
        "notes": [],
        "total_sets": 16,
      },
      {
        "abandoned": false,
        "days_ago": 20,
        "duration_min": 55,
        "notes": [],
        "total_sets": 16,
      },
      {
        "abandoned": false,
        "days_ago": 23,
        "duration_min": 55,
        "notes": [],
        "total_sets": 16,
      },
      {
        "abandoned": false,
        "days_ago": 27,
        "duration_min": 55,
        "notes": [],
        "total_sets": 16,
      },
      {
        "abandoned": false,
        "days_ago": 29,
        "duration_min": 55,
        "notes": [],
        "total_sets": 9,
      },
      {
        "abandoned": false,
        "days_ago": 30,
        "duration_min": 55,
        "notes": [],
        "total_sets": 16,
      },
      {
        "abandoned": false,
        "days_ago": 34,
        "duration_min": 55,
        "notes": [],
        "total_sets": 16,
      },
    ],
    "sessions_last_7d": 2,
    "today_dow": "wednesday",
    "total_weekly_sets_baseline": 32,
    "weekly_intent_status": [
      {
        "intent_summary": "Tilt toward upper body volume",
        "satisfied_last_7d": false,
      },
      {
        "intent_summary": "At most 1 leg day per week, never before a long ride",
        "satisfied_last_7d": false,
      },
    ],
  },
}
`;

exports[`buildTrainingStatePayload — golden archetype canaries > assembles a valid payload for the inconsistent archetype 1`] = `
{
  "candidate_exercises": [
    {
      "equipment": "barbell",
      "id": "def-barbell-back-squat",
      "intensity_class": "heavy",
      "movement_pattern": "squat",
      "name": "Barbell Back Squat",
      "primary_faus": [
        "quads",
        "glutes",
      ],
      "secondary_faus": [
        "hamstrings",
      ],
    },
    {
      "equipment": "barbell",
      "id": "def-barbell-bench-press",
      "intensity_class": "heavy",
      "movement_pattern": "horizontal_push",
      "name": "Barbell Bench Press",
      "primary_faus": [
        "chest",
        "triceps",
      ],
      "secondary_faus": [
        "front-delts",
      ],
    },
    {
      "equipment": "barbell",
      "id": "def-barbell-row",
      "intensity_class": "moderate",
      "movement_pattern": "horizontal_pull",
      "name": "Barbell Row",
      "primary_faus": [
        "mid-back",
        "lats",
      ],
      "secondary_faus": [
        "biceps",
      ],
    },
    {
      "equipment": "cable",
      "id": "def-cable-chest-fly",
      "intensity_class": "light",
      "movement_pattern": "isolation",
      "name": "Cable Chest Fly",
      "primary_faus": [
        "chest",
      ],
      "secondary_faus": [
        "front-delts",
      ],
    },
    {
      "equipment": "machine",
      "id": "def-calf-raise",
      "intensity_class": "light",
      "movement_pattern": "isolation",
      "name": "Calf Raise",
      "primary_faus": [
        "calves",
      ],
      "secondary_faus": [],
    },
    {
      "equipment": "barbell",
      "id": "def-conventional-deadlift",
      "intensity_class": "heavy",
      "movement_pattern": "hinge",
      "name": "Conventional Deadlift",
      "primary_faus": [
        "glutes",
        "hamstrings",
        "lower-back",
      ],
      "secondary_faus": [
        "traps",
      ],
    },
    {
      "equipment": "dumbbell",
      "id": "def-dumbbell-bench-press",
      "intensity_class": "moderate",
      "movement_pattern": "horizontal_push",
      "name": "Dumbbell Bench Press",
      "primary_faus": [
        "chest",
        "triceps",
      ],
      "secondary_faus": [
        "front-delts",
      ],
    },
    {
      "equipment": "dumbbell",
      "id": "def-dumbbell-curl",
      "intensity_class": "light",
      "movement_pattern": "isolation",
      "name": "Dumbbell Curl",
      "primary_faus": [
        "biceps",
      ],
      "secondary_faus": [
        "forearms",
      ],
    },
    {
      "equipment": "dumbbell",
      "id": "def-dumbbell-row",
      "intensity_class": "moderate",
      "movement_pattern": "horizontal_pull",
      "name": "Dumbbell Row",
      "primary_faus": [
        "mid-back",
        "lats",
      ],
      "secondary_faus": [
        "biceps",
      ],
    },
    {
      "equipment": "cable",
      "id": "def-face-pull",
      "intensity_class": "light",
      "movement_pattern": "horizontal_pull",
      "name": "Face Pull",
      "primary_faus": [
        "rear-delts",
      ],
      "secondary_faus": [
        "traps",
      ],
    },
    {
      "equipment": "barbell",
      "id": "def-front-squat",
      "intensity_class": "heavy",
      "movement_pattern": "squat",
      "name": "Front Squat",
      "primary_faus": [
        "quads",
      ],
      "secondary_faus": [
        "glutes",
      ],
    },
    {
      "equipment": "dumbbell",
      "id": "def-goblet-squat",
      "intensity_class": "moderate",
      "movement_pattern": "squat",
      "name": "Goblet Squat",
      "primary_faus": [
        "quads",
      ],
      "secondary_faus": [
        "glutes",
      ],
    },
    {
      "equipment": "dumbbell",
      "id": "def-incline-dumbbell-press",
      "intensity_class": "moderate",
      "movement_pattern": "horizontal_push",
      "name": "Incline Dumbbell Press",
      "primary_faus": [
        "chest",
        "front-delts",
      ],
      "secondary_faus": [
        "triceps",
      ],
    },
    {
      "equipment": "cable",
      "id": "def-lat-pulldown",
      "intensity_class": "moderate",
      "movement_pattern": "vertical_pull",
      "name": "Lat Pulldown",
      "primary_faus": [
        "lats",
      ],
      "secondary_faus": [
        "biceps",
        "mid-back",
      ],
    },
    {
      "equipment": "dumbbell",
      "id": "def-lateral-raise",
      "intensity_class": "light",
      "movement_pattern": "isolation",
      "name": "Lateral Raise",
      "primary_faus": [
        "side-delts",
      ],
      "secondary_faus": [],
    },
    {
      "equipment": "machine",
      "id": "def-leg-curl",
      "intensity_class": "light",
      "movement_pattern": "isolation",
      "name": "Leg Curl",
      "primary_faus": [
        "hamstrings",
      ],
      "secondary_faus": [],
    },
    {
      "equipment": "machine",
      "id": "def-leg-extension",
      "intensity_class": "light",
      "movement_pattern": "isolation",
      "name": "Leg Extension",
      "primary_faus": [
        "quads",
      ],
      "secondary_faus": [],
    },
    {
      "equipment": "machine",
      "id": "def-leg-press",
      "intensity_class": "moderate",
      "movement_pattern": "squat",
      "name": "Leg Press",
      "primary_faus": [
        "quads",
      ],
      "secondary_faus": [
        "glutes",
        "hamstrings",
      ],
    },
    {
      "equipment": "barbell",
      "id": "def-overhead-press",
      "intensity_class": "heavy",
      "movement_pattern": "vertical_push",
      "name": "Overhead Press",
      "primary_faus": [
        "front-delts",
        "side-delts",
      ],
      "secondary_faus": [
        "triceps",
      ],
    },
    {
      "equipment": "bodyweight",
      "id": "def-pull-up",
      "intensity_class": "heavy",
      "movement_pattern": "vertical_pull",
      "name": "Pull-Up",
      "primary_faus": [
        "lats",
      ],
      "secondary_faus": [
        "biceps",
        "mid-back",
      ],
    },
    {
      "equipment": "barbell",
      "id": "def-romanian-deadlift",
      "intensity_class": "heavy",
      "movement_pattern": "hinge",
      "name": "Romanian Deadlift",
      "primary_faus": [
        "hamstrings",
        "glutes",
      ],
      "secondary_faus": [
        "lower-back",
      ],
    },
    {
      "equipment": "cable",
      "id": "def-seated-cable-row",
      "intensity_class": "moderate",
      "movement_pattern": "horizontal_pull",
      "name": "Seated Cable Row",
      "primary_faus": [
        "mid-back",
        "lats",
      ],
      "secondary_faus": [
        "biceps",
      ],
    },
    {
      "equipment": "bodyweight",
      "id": "def-standard-push-up",
      "intensity_class": "moderate",
      "movement_pattern": "horizontal_push",
      "name": "Standard Push-Up",
      "primary_faus": [
        "chest",
        "triceps",
      ],
      "secondary_faus": [
        "front-delts",
      ],
    },
    {
      "equipment": "cable",
      "id": "def-tricep-pushdown",
      "intensity_class": "light",
      "movement_pattern": "isolation",
      "name": "Tricep Pushdown",
      "primary_faus": [
        "triceps",
      ],
      "secondary_faus": [],
    },
  ],
  "data_maturity": "partial",
  "durable_profile": {
    "banned_exercise_ids": [],
    "default_intensity_preference": "balanced",
    "equipment_available": [
      "barbell",
      "dumbbells",
      "cable",
      "machines",
      "bands",
      "bodyweight",
    ],
    "goal_sentences": [
      "Get back into a routine",
      "Stop losing the strength I build",
    ],
    "ratio_targets": {
      "abs": 1,
      "adductors": 1,
      "biceps": 1,
      "calves": 1,
      "chest": 1,
      "forearms": 1,
      "front-delts": 1,
      "glutes": 1,
      "hamstrings": 1,
      "lats": 1,
      "lower-back": 1,
      "mid-back": 1,
      "obliques": 1,
      "quads": 1,
      "rear-delts": 1,
      "side-delts": 1,
      "traps": 1,
      "triceps": 1,
    },
    "weekly_intent": [
      {
        "text": "Something is better than nothing",
        "type": "free_text",
      },
    ],
  },
  "ephemeral_context": {
    "deprioritize_freetext": null,
    "equipment_override": null,
    "intensity_vibe": "solid",
    "prioritize_freetext": null,
    "time_budget_minutes": 45,
  },
  "training_state": {
    "acute_chronic_ratio": null,
    "days_since_any_session": 12,
    "detraining_gap": {
      "days": 12,
    },
    "goal_progress": [],
    "now": "2026-07-01T18:00:00.000Z",
    "per_fau": [
      {
        "actual_14d_share": 0.1667,
        "baseline_weekly_sets": 3,
        "deficit_share": 0,
        "fau": "chest",
        "last_heavy_days_ago": 12,
        "last_session_days_ago": 12,
        "low_data": true,
        "rolling_14d_sets": 3,
        "rolling_7d_sets": 0,
        "sessions_14d": 1,
        "target_share": 0.1667,
      },
      {
        "actual_14d_share": 0.1667,
        "baseline_weekly_sets": 3,
        "deficit_share": 0,
        "fau": "mid-back",
        "last_heavy_days_ago": 45,
        "last_session_days_ago": 12,
        "low_data": true,
        "rolling_14d_sets": 3,
        "rolling_7d_sets": 0,
        "sessions_14d": 1,
        "target_share": 0.1667,
      },
      {
        "actual_14d_share": 0.1667,
        "baseline_weekly_sets": 3,
        "deficit_share": 0,
        "fau": "lats",
        "last_heavy_days_ago": 26,
        "last_session_days_ago": 12,
        "low_data": true,
        "rolling_14d_sets": 3,
        "rolling_7d_sets": 0,
        "sessions_14d": 1,
        "target_share": 0.1667,
      },
      {
        "actual_14d_share": 0.1667,
        "baseline_weekly_sets": 5,
        "deficit_share": 0,
        "fau": "triceps",
        "last_heavy_days_ago": 12,
        "last_session_days_ago": 12,
        "low_data": true,
        "rolling_14d_sets": 3,
        "rolling_7d_sets": 0,
        "sessions_14d": 1,
        "target_share": 0.1667,
      },
      {
        "actual_14d_share": 0.1667,
        "baseline_weekly_sets": 3,
        "deficit_share": 0,
        "fau": "quads",
        "last_heavy_days_ago": 12,
        "last_session_days_ago": 12,
        "low_data": true,
        "rolling_14d_sets": 3,
        "rolling_7d_sets": 0,
        "sessions_14d": 1,
        "target_share": 0.1667,
      },
      {
        "actual_14d_share": 0.1667,
        "baseline_weekly_sets": 3,
        "deficit_share": 0,
        "fau": "glutes",
        "last_heavy_days_ago": 12,
        "last_session_days_ago": 12,
        "low_data": true,
        "rolling_14d_sets": 3,
        "rolling_7d_sets": 0,
        "sessions_14d": 1,
        "target_share": 0.1667,
      },
    ],
    "per_movement_calibration": [],
    "preferences_summary": {
      "high_confidence_dislikes": [],
      "high_confidence_likes": [],
      "low_confidence_note": "Most exercises have too little preference data — defer to the candidate list.",
    },
    "recent_feedback": {
      "common_additions_fau": [],
      "common_deletions_fau": [],
      "common_swaps": [],
      "suggestions_last_30d": 0,
      "swap_rate": 0,
    },
    "recent_sessions": [
      {
        "abandoned": false,
        "days_ago": 12,
        "duration_min": 55,
        "notes": [],
        "total_sets": 9,
      },
      {
        "abandoned": false,
        "days_ago": 26,
        "duration_min": 55,
        "notes": [],
        "total_sets": 8,
      },
      {
        "abandoned": true,
        "days_ago": 33,
        "duration_min": 55,
        "notes": [],
        "total_sets": 3,
      },
      {
        "abandoned": false,
        "days_ago": 38,
        "duration_min": 55,
        "notes": [],
        "total_sets": 8,
      },
      {
        "abandoned": false,
        "days_ago": 45,
        "duration_min": 55,
        "notes": [],
        "total_sets": 9,
      },
      {
        "abandoned": false,
        "days_ago": 50,
        "duration_min": 55,
        "notes": [],
        "total_sets": 8,
      },
      {
        "abandoned": false,
        "days_ago": 55,
        "duration_min": 55,
        "notes": [],
        "total_sets": 9,
      },
    ],
    "sessions_last_7d": 0,
    "today_dow": "wednesday",
    "total_weekly_sets_baseline": 8.5,
    "weekly_intent_status": [
      {
        "intent_summary": "Something is better than nothing",
        "satisfied_last_7d": false,
      },
    ],
  },
}
`;

exports[`buildTrainingStatePayload — golden archetype canaries > assembles a valid payload for the powerlifter archetype 1`] = `
{
  "candidate_exercises": [
    {
      "equipment": "barbell",
      "id": "def-barbell-back-squat",
      "intensity_class": "heavy",
      "movement_pattern": "squat",
      "name": "Barbell Back Squat",
      "primary_faus": [
        "quads",
        "glutes",
      ],
      "secondary_faus": [
        "hamstrings",
      ],
    },
    {
      "equipment": "barbell",
      "id": "def-barbell-bench-press",
      "intensity_class": "heavy",
      "movement_pattern": "horizontal_push",
      "name": "Barbell Bench Press",
      "primary_faus": [
        "chest",
        "triceps",
      ],
      "secondary_faus": [
        "front-delts",
      ],
    },
    {
      "equipment": "barbell",
      "id": "def-barbell-row",
      "intensity_class": "moderate",
      "movement_pattern": "horizontal_pull",
      "name": "Barbell Row",
      "primary_faus": [
        "mid-back",
        "lats",
      ],
      "secondary_faus": [
        "biceps",
      ],
    },
    {
      "equipment": "cable",
      "id": "def-cable-chest-fly",
      "intensity_class": "light",
      "movement_pattern": "isolation",
      "name": "Cable Chest Fly",
      "primary_faus": [
        "chest",
      ],
      "secondary_faus": [
        "front-delts",
      ],
    },
    {
      "equipment": "machine",
      "id": "def-calf-raise",
      "intensity_class": "light",
      "movement_pattern": "isolation",
      "name": "Calf Raise",
      "primary_faus": [
        "calves",
      ],
      "secondary_faus": [],
    },
    {
      "equipment": "barbell",
      "id": "def-conventional-deadlift",
      "intensity_class": "heavy",
      "movement_pattern": "hinge",
      "name": "Conventional Deadlift",
      "primary_faus": [
        "glutes",
        "hamstrings",
        "lower-back",
      ],
      "secondary_faus": [
        "traps",
      ],
    },
    {
      "equipment": "dumbbell",
      "id": "def-dumbbell-bench-press",
      "intensity_class": "moderate",
      "movement_pattern": "horizontal_push",
      "name": "Dumbbell Bench Press",
      "primary_faus": [
        "chest",
        "triceps",
      ],
      "secondary_faus": [
        "front-delts",
      ],
    },
    {
      "equipment": "dumbbell",
      "id": "def-dumbbell-curl",
      "intensity_class": "light",
      "movement_pattern": "isolation",
      "name": "Dumbbell Curl",
      "primary_faus": [
        "biceps",
      ],
      "secondary_faus": [
        "forearms",
      ],
    },
    {
      "equipment": "dumbbell",
      "id": "def-dumbbell-row",
      "intensity_class": "moderate",
      "movement_pattern": "horizontal_pull",
      "name": "Dumbbell Row",
      "primary_faus": [
        "mid-back",
        "lats",
      ],
      "secondary_faus": [
        "biceps",
      ],
    },
    {
      "equipment": "cable",
      "id": "def-face-pull",
      "intensity_class": "light",
      "movement_pattern": "horizontal_pull",
      "name": "Face Pull",
      "primary_faus": [
        "rear-delts",
      ],
      "secondary_faus": [
        "traps",
      ],
    },
    {
      "equipment": "barbell",
      "id": "def-front-squat",
      "intensity_class": "heavy",
      "movement_pattern": "squat",
      "name": "Front Squat",
      "primary_faus": [
        "quads",
      ],
      "secondary_faus": [
        "glutes",
      ],
    },
    {
      "equipment": "dumbbell",
      "id": "def-goblet-squat",
      "intensity_class": "moderate",
      "movement_pattern": "squat",
      "name": "Goblet Squat",
      "primary_faus": [
        "quads",
      ],
      "secondary_faus": [
        "glutes",
      ],
    },
    {
      "equipment": "dumbbell",
      "id": "def-incline-dumbbell-press",
      "intensity_class": "moderate",
      "movement_pattern": "horizontal_push",
      "name": "Incline Dumbbell Press",
      "primary_faus": [
        "chest",
        "front-delts",
      ],
      "secondary_faus": [
        "triceps",
      ],
    },
    {
      "equipment": "cable",
      "id": "def-lat-pulldown",
      "intensity_class": "moderate",
      "movement_pattern": "vertical_pull",
      "name": "Lat Pulldown",
      "primary_faus": [
        "lats",
      ],
      "secondary_faus": [
        "biceps",
        "mid-back",
      ],
    },
    {
      "equipment": "dumbbell",
      "id": "def-lateral-raise",
      "intensity_class": "light",
      "movement_pattern": "isolation",
      "name": "Lateral Raise",
      "primary_faus": [
        "side-delts",
      ],
      "secondary_faus": [],
    },
    {
      "equipment": "machine",
      "id": "def-leg-curl",
      "intensity_class": "light",
      "movement_pattern": "isolation",
      "name": "Leg Curl",
      "primary_faus": [
        "hamstrings",
      ],
      "secondary_faus": [],
    },
    {
      "equipment": "machine",
      "id": "def-leg-extension",
      "intensity_class": "light",
      "movement_pattern": "isolation",
      "name": "Leg Extension",
      "primary_faus": [
        "quads",
      ],
      "secondary_faus": [],
    },
    {
      "equipment": "machine",
      "id": "def-leg-press",
      "intensity_class": "moderate",
      "movement_pattern": "squat",
      "name": "Leg Press",
      "primary_faus": [
        "quads",
      ],
      "secondary_faus": [
        "glutes",
        "hamstrings",
      ],
    },
    {
      "equipment": "barbell",
      "id": "def-overhead-press",
      "intensity_class": "heavy",
      "movement_pattern": "vertical_push",
      "name": "Overhead Press",
      "primary_faus": [
        "front-delts",
        "side-delts",
      ],
      "secondary_faus": [
        "triceps",
      ],
    },
    {
      "equipment": "bodyweight",
      "id": "def-pull-up",
      "intensity_class": "heavy",
      "movement_pattern": "vertical_pull",
      "name": "Pull-Up",
      "primary_faus": [
        "lats",
      ],
      "secondary_faus": [
        "biceps",
        "mid-back",
      ],
    },
    {
      "equipment": "barbell",
      "id": "def-romanian-deadlift",
      "intensity_class": "heavy",
      "movement_pattern": "hinge",
      "name": "Romanian Deadlift",
      "primary_faus": [
        "hamstrings",
        "glutes",
      ],
      "secondary_faus": [
        "lower-back",
      ],
    },
    {
      "equipment": "cable",
      "id": "def-seated-cable-row",
      "intensity_class": "moderate",
      "movement_pattern": "horizontal_pull",
      "name": "Seated Cable Row",
      "primary_faus": [
        "mid-back",
        "lats",
      ],
      "secondary_faus": [
        "biceps",
      ],
    },
    {
      "equipment": "bodyweight",
      "id": "def-standard-push-up",
      "intensity_class": "moderate",
      "movement_pattern": "horizontal_push",
      "name": "Standard Push-Up",
      "primary_faus": [
        "chest",
        "triceps",
      ],
      "secondary_faus": [
        "front-delts",
      ],
    },
    {
      "equipment": "cable",
      "id": "def-tricep-pushdown",
      "intensity_class": "light",
      "movement_pattern": "isolation",
      "name": "Tricep Pushdown",
      "primary_faus": [
        "triceps",
      ],
      "secondary_faus": [],
    },
  ],
  "data_maturity": "established",
  "durable_profile": {
    "banned_exercise_ids": [],
    "default_intensity_preference": "strength",
    "equipment_available": [
      "barbell",
      "dumbbells",
      "cable",
      "machines",
      "bands",
      "bodyweight",
    ],
    "goal_sentences": [
      "Add 50 lbs to my squat this year",
      "Keep bench moving",
    ],
    "ratio_targets": {
      "abs": 1,
      "adductors": 1,
      "biceps": 0.5,
      "calves": 1,
      "chest": 1.3,
      "forearms": 1,
      "front-delts": 1,
      "glutes": 1,
      "hamstrings": 1,
      "lats": 1,
      "lower-back": 1.3,
      "mid-back": 1,
      "obliques": 1,
      "quads": 1.4000000000000001,
      "rear-delts": 1,
      "side-delts": 0.5,
      "traps": 1,
      "triceps": 1,
    },
    "weekly_intent": [
      {
        "text": "Squat, bench or deadlift every session",
        "type": "free_text",
      },
      {
        "text": "Accessories only after main lifts",
        "type": "free_text",
      },
    ],
  },
  "ephemeral_context": {
    "deprioritize_freetext": null,
    "equipment_override": null,
    "intensity_vibe": "solid",
    "prioritize_freetext": null,
    "time_budget_minutes": 45,
  },
  "training_state": {
    "acute_chronic_ratio": 1.13,
    "days_since_any_session": 1,
    "detraining_gap": null,
    "goal_progress": [
      {
        "goal": "Add 50 lbs to my squat this year",
        "interpretation": "squat EWMA + e1RM trend",
        "recent_top_sets_lbs": [
          345,
          225,
          355,
          230,
        ],
        "trend": "regressing",
        "weeks_observed": 3,
      },
      {
        "goal": "Keep bench moving",
        "interpretation": "horizontal_push EWMA + e1RM trend",
        "recent_top_sets_lbs": [
          245,
          250,
        ],
        "trend": "progressing",
        "weeks_observed": 2,
      },
    ],
    "now": "2026-07-01T18:00:00.000Z",
    "per_fau": [
      {
        "actual_14d_share": 0.0735,
        "baseline_weekly_sets": 5,
        "deficit_share": 0.0503,
        "fau": "chest",
        "last_heavy_days_ago": 4,
        "last_session_days_ago": 4,
        "low_data": false,
        "rolling_14d_sets": 5,
        "rolling_7d_sets": 5,
        "sessions_14d": 1,
        "status": "neglected",
        "target_share": 0.1238,
      },
      {
        "actual_14d_share": 0,
        "baseline_weekly_sets": 3,
        "deficit_share": 0.0952,
        "fau": "mid-back",
        "last_heavy_days_ago": 20,
        "last_session_days_ago": 20,
        "low_data": false,
        "rolling_14d_sets": 0,
        "rolling_7d_sets": 0,
        "sessions_14d": 0,
        "status": "neglected",
        "target_share": 0.0952,
      },
      {
        "actual_14d_share": 0.1176,
        "baseline_weekly_sets": 4,
        "deficit_share": 0.0062,
        "fau": "lower-back",
        "last_heavy_days_ago": 1,
        "last_session_days_ago": 1,
        "low_data": false,
        "rolling_14d_sets": 8,
        "rolling_7d_sets": 4,
        "sessions_14d": 2,
        "status": "balanced",
        "target_share": 0.1238,
      },
      {
        "actual_14d_share": 0.0441,
        "baseline_weekly_sets": 3,
        "deficit_share": 0.0511,
        "fau": "front-delts",
        "last_heavy_days_ago": 4,
        "last_session_days_ago": 4,
        "low_data": false,
        "rolling_14d_sets": 3,
        "rolling_7d_sets": 3,
        "sessions_14d": 1,
        "status": "neglected",
        "target_share": 0.0952,
      },
      {
        "actual_14d_share": 0.0441,
        "baseline_weekly_sets": 3,
        "deficit_share": 0.0035,
        "fau": "side-delts",
        "last_heavy_days_ago": 4,
        "last_session_days_ago": 4,
        "low_data": false,
        "rolling_14d_sets": 3,
        "rolling_7d_sets": 3,
        "sessions_14d": 1,
        "status": "balanced",
        "target_share": 0.0476,
      },
      {
        "actual_14d_share": 0.0882,
        "baseline_weekly_sets": 3,
        "deficit_share": 0.007,
        "fau": "lats",
        "last_heavy_days_ago": 1,
        "last_session_days_ago": 1,
        "low_data": false,
        "rolling_14d_sets": 6,
        "rolling_7d_sets": 3,
        "sessions_14d": 2,
        "status": "balanced",
        "target_share": 0.0952,
      },
      {
        "actual_14d_share": 0.0735,
        "baseline_weekly_sets": 8,
        "deficit_share": 0.0217,
        "fau": "triceps",
        "last_heavy_days_ago": 4,
        "last_session_days_ago": 4,
        "low_data": false,
        "rolling_14d_sets": 5,
        "rolling_7d_sets": 5,
        "sessions_14d": 1,
        "status": "balanced",
        "target_share": 0.0952,
      },
      {
        "actual_14d_share": 0.2059,
        "baseline_weekly_sets": 8,
        "deficit_share": -0.0726,
        "fau": "quads",
        "last_heavy_days_ago": 1,
        "last_session_days_ago": 1,
        "low_data": false,
        "rolling_14d_sets": 14,
        "rolling_7d_sets": 3,
        "sessions_14d": 3,
        "status": "over",
        "target_share": 0.1333,
      },
      {
        "actual_14d_share": 0.1618,
        "baseline_weekly_sets": 4,
        "deficit_share": -0.0666,
        "fau": "hamstrings",
        "last_heavy_days_ago": 1,
        "last_session_days_ago": 1,
        "low_data": false,
        "rolling_14d_sets": 11,
        "rolling_7d_sets": 4,
        "sessions_14d": 3,
        "status": "over",
        "target_share": 0.0952,
      },
      {
        "actual_14d_share": 0.1912,
        "baseline_weekly_sets": 5,
        "deficit_share": -0.096,
        "fau": "glutes",
        "last_heavy_days_ago": 1,
        "last_session_days_ago": 1,
        "low_data": false,
        "rolling_14d_sets": 13,
        "rolling_7d_sets": 4,
        "sessions_14d": 3,
        "status": "over",
        "target_share": 0.0952,
      },
    ],
    "per_movement_calibration": [
      {
        "current_ewma_top_weight_lbs": 113.8,
        "estimate_staleness_days": 8,
        "last_session_days_ago": 8,
        "movement_pattern": "isolation",
        "recent_observations": [
          {
            "days_ago": 27,
            "weight_lbs": 90,
          },
          {
            "days_ago": 20,
            "weight_lbs": 50,
          },
          {
            "days_ago": 8,
            "weight_lbs": 90,
          },
        ],
        "typical_rep_range": "10-11",
        "typical_rpe": 8.7,
      },
      {
        "current_ewma_top_weight_lbs": 347.1,
        "estimate_staleness_days": 1,
        "last_session_days_ago": 1,
        "movement_pattern": "squat",
        "recent_observations": [
          {
            "days_ago": 27,
            "weight_lbs": 345,
          },
          {
            "days_ago": 13,
            "weight_lbs": 225,
          },
          {
            "days_ago": 8,
            "weight_lbs": 355,
          },
          {
            "days_ago": 1,
            "weight_lbs": 230,
          },
        ],
        "typical_rep_range": "5-9",
        "typical_rpe": 8,
      },
    ],
    "preferences_summary": {
      "high_confidence_dislikes": [],
      "high_confidence_likes": [],
      "low_confidence_note": "Most exercises have too little preference data — defer to the candidate list.",
    },
    "recent_feedback": {
      "common_additions_fau": [],
      "common_deletions_fau": [],
      "common_swaps": [],
      "suggestions_last_30d": 0,
      "swap_rate": 0,
    },
    "recent_sessions": [
      {
        "abandoned": false,
        "days_ago": 1,
        "duration_min": 55,
        "notes": [],
        "total_sets": 10,
      },
      {
        "abandoned": true,
        "days_ago": 4,
        "duration_min": 55,
        "notes": [],
        "total_sets": 8,
      },
      {
        "abandoned": false,
        "days_ago": 8,
        "duration_min": 55,
        "notes": [],
        "total_sets": 11,
      },
      {
        "abandoned": false,
        "days_ago": 13,
        "duration_min": 55,
        "notes": [],
        "total_sets": 10,
      },
      {
        "abandoned": false,
        "days_ago": 20,
        "duration_min": 55,
        "notes": [],
        "total_sets": 14,
      },
      {
        "abandoned": false,
        "days_ago": 27,
        "duration_min": 55,
        "notes": [],
        "total_sets": 11,
      },
      {
        "abandoned": false,
        "days_ago": 33,
        "duration_min": 55,
        "notes": [],
        "total_sets": 10,
      },
      {
        "abandoned": false,
        "days_ago": 37,
        "duration_min": 55,
        "notes": [],
        "total_sets": 14,
      },
      {
        "abandoned": false,
        "days_ago": 41,
        "duration_min": 55,
        "notes": [],
        "total_sets": 11,
      },
      {
        "abandoned": false,
        "days_ago": 44,
        "duration_min": 55,
        "notes": [],
        "total_sets": 10,
      },
    ],
    "sessions_last_7d": 2,
    "today_dow": "wednesday",
    "total_weekly_sets_baseline": 16.5,
    "weekly_intent_status": [
      {
        "intent_summary": "Squat, bench or deadlift every session",
        "satisfied_last_7d": false,
      },
      {
        "intent_summary": "Accessories only after main lifts",
        "satisfied_last_7d": false,
      },
    ],
  },
}
`;
